--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:4.0.0"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.28-alpha'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -27,5 +28,8 @@ task clean(type: Delete) {
 
 ext {
     roomVersion = '2.2.5'
-
+    dagger2Version = '2.28.3'
+    daggerHiltAndroidVersion =  '2.28-alpha'
+    daggerHiltVersion       =  '1.0.0-alpha01'
 }
+
